# Games

./: Games.html  Games.md
101/: README.md
101/1_chapter4_transformation/: CMakeLists.txt  main.cpp  rasterizer.hpp
101/2_chapter7_DepthTesting/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
101/3_chapter9_Shading/: CMakeLists.txt  Texture.hpp  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
101/4_chapter11_Geometry/: CMakeLists.txt  main.cpp
101/5_chapter14_RayTracing/: CMakeLists.txt  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
101/6_chapter14_RayTracing/: BVH.cpp  BVH.hpp  Bounds3.hpp  Intersection.hpp  Material.hpp  Ray.hpp  Renderer.cpp  Scene.hpp  Triangle.hpp  Vector.hpp  main.cpp
101/7_chapter17_PathTracing/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Ray.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  binary.ppm  binary_16spp.ppm  binary_256spp.ppm  binary_64ssp.ppm  binary_emit.ppm  binary_noemit.ppm  main.cpp
